# tietoProject

./: .gitignore  CMakeLists.txt  Makefile
include/: analyzer.h  circular_buffer.h  consts.h  lifetime_struct.h  logger.h  printer.h  reader.h  tests.h
src/: analyzer.c  circular_buffer.c  lifetime_struct.c  logger.c  main.c  printer.c  reader.c  tests.c
